# amr-2026-3team

./: .gitignore  LICENSE  README.md
ros2_ws/motor_driver2/: setup.cfg  setup.py
ros2_ws/motor_driver2/motor_driver2/: motor_driver2.py
ros2_ws/sar_bt_mission/: CMakeLists.txt  package.xml
ros2_ws/sar_bt_mission/behavior_trees/: sar_mission.xml
ros2_ws/sar_bt_mission/include/sar_bt_mission/: align_to_target_action.hpp  lock_target_action.hpp  mark_target_served_action.hpp  navigate_to_target_action.hpp  navigate_to_waypoint_action.hpp  publish_rescue_report_action.hpp  safe_distance_reached_condition.hpp  scan_at_waypoint_action.hpp  target_confirmed_condition.hpp  voice_interaction_action.hpp
ros2_ws/sar_bt_mission/launch/: sar_mission.launch.py
ros2_ws/sar_bt_mission/param/: nav2_params.yaml
ros2_ws/sar_bt_mission/scripts/: red_detector_node.py
ros2_ws/sar_bt_mission/src/: align_to_target_action.cpp  lock_target_action.cpp  main.cpp  mark_target_served_action.cpp  publish_rescue_report_action.cpp  safe_distance_reached_condition.cpp  scan_at_waypoint_action.cpp  target_confirmed_condition.cpp  voice_interaction_action.cpp
ros2_ws/storagy/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml
ros2_ws/storagy/config/cartographer/: mobile_2d.lua
ros2_ws/storagy/config/sick_scan_xd/: new_sick_tim_5xx_front.yaml
ros2_ws/storagy/launch/: bringup.launch.py  hardware_bringup.launch.py  robot_state_publisher.launch.py  rviz2.launch.py
ros2_ws/storagy/launch/cartographer/: cartographer.launch.py  occupancy_grid.launch.py
ros2_ws/storagy/launch/navigation2/: bringup_launch.py  navigation_launch.py
ros2_ws/storagy/launch/test/: motor_driver.launch.py  sick_tim_5xx_front.launch.py
ros2_ws/storagy/map/: map.pgm  map.yaml
ros2_ws/storagy/models/aruco_0/: model.config  model.sdf
ros2_ws/storagy/models/aruco_0/meshes/: aruco_0.dae
ros2_ws/storagy/models/endoscopy_room/: model.config  model.sdf
ros2_ws/storagy/param/navigation2/: storagy.yaml
ros2_ws/storagy/rviz/: storagy.rviz
storagy_llm/: package.xml  setup.cfg  setup.py
storagy_llm/params/: points.yaml  prompt.yaml
storagy_llm/resource/: storagy_llm
storagy_llm/storagy_llm/: __init__.py  agent_client.py  agent_service.py  robot_tools.py  web_dashboard.py
storagy_llm/web/: app.js  index.html  style.css
storagy_ws/: RUN_GUIDE.md
storagy_ws/motor_driver2/: package.xml
storagy_ws/motor_driver2/motor_driver2/: motor_driver2.py
storagy_ws/red_detector/: package.xml  setup.cfg  setup.py
storagy_ws/storagy/: CMakeLists.txt  package.xml
storagy_ws/storagy/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
storagy_ws/storagy/config/sick_scan_xd/: new_sick_tim_5xx_front.yaml
storagy_ws/storagy/launch/: bringup.launch.py  hardware_bringup.launch.py
storagy_ws/storagy/launch/navigation2/: localization_launch.py  navigation2.launch.py
storagy_ws/storagy/map/: mapname.json
storagy_ws/storagy/param/: setting.yaml
storagy_ws/storagy/path/: default.csv
storagy_ws/storagy/rviz/: storagy.rviz
storagy_ws/storagy/scripts/: fire_detection_bt.py
storagy_ws/storagy/urdf/: storagy.urdf
storagy_ws/wall_follower/: package.xml  setup.py
storagy_ws/wall_follower/wall_follower/: camera_subscriber.py  wall_follower.py
storagy_ws/wall_follower_msgs/: CMakeLists.txt  package.xml
storagy_ws/wall_follower_msgs/msg/: Stop.msg
